<resources>
    <string name="app_name">tracking app</string>

    <string name="init_bars">0 km</string>
    <string name="register">Account erstellen</string>
    <string name="email_hint">Email-Adresse</string>
    <string name="password_hint">Passwort</string>
    <string name="password_repeat">Passwort wiederholen</string>
    <string name="register_text">Bitte geben Sie Ihre Email-Adresse und ein Passwort ein: </string>
    <string name="btn_register_text">Registrieren</string>
    <string name="register_to_login">Ich habe bereits einen Account</string>

    <string name="login">In Account einloggen</string>
    <string name="login_text">Bitte geben Sie Ihre Email-Adresse und Ihr Passwort ein: </string>
    <string name="login_btn">Einloggen</string>
    <string name="no_account">Ich habe noch keinen Account</string>
    <string name="track">Track Activity</string>
    <string name="percentage">%1$d%%</string>
    <string name="bicycle">On a bicycle</string>
    <string name="foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown_activity">Unknown activity</string>
    <string name="vehicle">In a vehicle</string>
    <string name="walking">Walking</string>
</resources>
